--- a/E03/Pipfile
+++ b/E03/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 numpy = "*"
+geojson = "*"
+flake8 = "*"
+autopep8 = "*"
 
 [dev-packages]
-pylint = "*"
 autopep8 = "*"
 
 [requires]
