--- a/E03/.vscode/launch.json
+++ b/E03/.vscode/launch.json
@@ -5,6 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: run test File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": [
+                "<",
+                "${workspaceFolder}/test.txt",
+            ]
+        },
+        {
             "name": "Python: run good File",
             "type": "python",
             "request": "launch",
